# autograder

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  MANIFEST.in.bak  Makefile  Pipfile  README.md  TestHelper.java  grader.py  publish.sh  pyproject.toml  pyrightconfig.json  reformat.bash  setup.py  templater.py  test.py  test_helper.py  testcase.py  testcases.py  testik.py  update_examples.bash  util.py
.github/workflows/: codeql-analysis.yml  publish.yml  python-ci.yaml  python-publish.yml  test.yaml
C/: Syllabus_COP_3223C_Spring2020_S3.pdf:Zone.Identifier  example_test_case.c  grade-all.sh  grader.py  lecture.c  lecture_notes_1  test_get_binomial_coefficient.c  test_sum_of_digits.c
C/grader/: .gitignore  grade-all.sh  grader.py  timer.py
C/hw1/: cleaner.py  grade-all.sh  test_adjust_array.c  test_sum_of_digits.c
C/tests/testcases/: test_output.c  test_result.c
Java/: ExampleTestCase.java  grade-all.sh
Leak_Detector_Tool/: README.md  backupscript.txt  leak_detector_c.c  myscript.sh
autograder/: __init__.py  __main__.py  __version__.py  autograder.py  config_manager.py  default_config.ini  default_config.toml  default_formatters.py  default_stdout_formatters.py  exit_codes.py  filters.py  grader.py  grading_output.py  guide.py  output_summary.py  output_validator.py  testcases.py  util.py
autograder/canvas/: __main__.py  auth.py  submissions.py
autograder/memory_leak/: README.md  filename.py  leak_detector_c.c  leak_detector_c.h  leak_info.txt  memleak.sh  myscript.sh  test4.txt
autograder/memory_leak/Leak_Detector_Tool/: leak_detector_c.h  leak_info.txt  memtest  myscript.sh  test.c  test2.c
autograder/memory_leak/backup/: alt_script_1.txt  realloc_stuff.txt
autograder/memory_leak/extra_source_codes/: test.c  test1.cxx
autograder/memory_leak/heapusage/: notes.txt
autograder/memory_leak/memd/: LICENSE  mem.h
autograder/memory_leak/tests/: atoi.c  (+24 more)
autograder/plagiarism_detection/: __init__.py  comparison.py  plagiarism_detection.py  plagiarism_detection_test.py
autograder/test_helpers/: TestHelper.java  test_helper.c  test_helper.py
autograder/testcase_utils/: __init__.py  abstract_base_class.py  abstract_testcase.py  exit_codes.py  shell.py  stdout.py  stdout_testcase.py  submission.py  test_helper_formatter.py  testcase_io.py  testcase_picker.py  testcase_result_validator.py
autograder/testcases/: __init__.py  abstract_base_class.py  c.py  cpp.py  java.py  multifile.py  python.py  stdout.py
docs/: README.md  _coverpage.md  index.html
examples/c/: grader_output.txt  oatmealstanislav_12345_12345_Homework.c
examples/c++/: grader_output.txt  oatmealstanislav_12345_12345_Homework.cpp
examples/cheating_attempt/: CheatingStudent.py  HonestStudent.py  grader_output.txt  homework.py
examples/cheating_attempts/: Homework.java  grader_output.txt  homework.c  homework.py
examples/extra_cli_args/: config.ini  grader_output.txt  submission.py
examples/extra_files/: grader_output.txt  submission.py
examples/fibonacci_c/: average_student_homework.c  failing_student_homework.c  grader_output.txt  perfect_student_homework.c  student_with_wrong_assignment_name.c
examples/java/: barleyrichard_12832_123421_Homework.java  grader_output.txt  oatmealstanislav_12345_12345_Homework.java
examples/multiple_languages/: grader_output.txt
examples/python/: grader_output.txt  oatmealstanislav_12345_12345_Homework.py  syntax_error_homework.py
examples/simplest_c/: README.md  SomeRandomAssignment.c  grader_output.txt
examples/stdout_only/: BashHomework.bash  PythonHomeworkWithShebang.py  PythonHomeworkWithoutShebang.py  RubyHomework.rb  SingleFileCHomework.c  SingleFileJavaHomework.java  grader_output.txt  homework2.py
heapusage/src/: hulog.cpp
heapusage/tests/: ex004.c  ex007.c  test002
memd/: README.md  mem.c  test2.c
memoryleak/Leak_Detector_Tool/: README.md  a.out  cpp_script_backup.txt  leak_detector_c.c  leak_detector_c.h  leak_info.txt  memtest  myscript.sh  test.c  test1.cpp  test2.c
memoryleak/memd/: .gitignore  Makefile  test.c
submissions/: oatmealstanislav_12345_12345_Homework.java
suka/: sample_student_submission.py
suka/tests/: stdout_formatters.py
tests/: test_examples.py  test_guide.py  test_plagiarism.py  tools.py
tests/test_helpers/: TestHelper.java  test_helper.c  test_helper.py
tests/testcases/: test_output.c  test_result.c
typings/sh/: __init__.pyi
(+155 files in other folders)
