[tool.poetry]
name = "assignment-autograder"
version = "3.3.9"
description = "Automatic assignment grading for instructor use in programming courses"
authors = ["Ovsyanka <szmiev2000@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/Ovsyanka83/autograder"
include = ["autograder/**/*"]
packages = [{ include = "autograder" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Topic :: Education :: Testing",
]


[tool.poetry.dependencies]
python = ">=3.7,<3.10"
antlr4-python3-runtime = "4.9.2"
tomlkit = "^0.7.2"
numba = "^0.54.1"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
isort = "^5.10.1"

[tool.poetry.scripts]
autograder = 'autograder.__main__:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
