[tool.poetry]
name = "assignment-autograder"
version = "3.7.2"
description = "Automatic assignment grading for instructor use in programming courses"
authors = ["Ovsyanka <szmiev2000@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/Ovsyanka83/autograder"
include = ["autograder/**/*"]
packages = [{ include = "autograder" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Topic :: Education :: Testing",
]


[tool.poetry.dependencies]
python = ">=3.8,<3.12"
antlr4-python3-runtime = "4.9.2"
tomlkit = "^0.11.4"
numba = "^0.56.2"
numpy = "^1.22.4"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
pyupgrade = "*"
autoflake = "*"
bandit = { version = "*", extras = ["toml"] }
pytest = "^7.1.3"
pytest-cov = "^3.0.0"

[tool.poetry.scripts]
autograder = 'autograder.__main__:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
data_file = "coverage/coverage"
parallel = true
source = ["autograder"]

[tool.coverage.html]
skip_covered = true
skip_empty = true

[tool.coverage.report]
omit = ["examples/*", "autograder/plagiarism_detection/lexers/*"]
fail_under = 80
skip_covered = true
skip_empty = true
show_missing = true

[tool.isort]
profile = "black"
multi_line_output = 3
skip_gitignore = true
skip_glob = ["examples/*"]
line_length = 120
lines_between_sections = 1

[tool.black]
line-length = 120
target_version = ['py38']
extend-exclude = 'examples'

[tool.bandit]
exclude_dirs = ["./examples"]
skips = ["B104"]
